k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-onscreen
  namespace: widget-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-onscreen
  template:
    metadata:
      labels:
        app: wp-onscreen
    spec:
      containers:
      - image: spbdocker03:5000/widget-platform/onscreen:||version||
        name: wp-onscreen
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-config
        resources:
          limits:
            memory: "256Mi"
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Moscow
---
apiVersion: v1
kind: Service
metadata:
  name: wp-onscreen
  namespace: widget-platform
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wp-onscreen
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,x-qp8-access-token,customer-code"
  name: wp-onscreen
  namespace: widget-platform
spec:
  rules:
  - host: onscreen.widget-platform.dev.qsupport.ru
    http:
      paths:
      - backend:
          serviceName: wp-onscreen
          servicePort: 80
